--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DSN="jett:1412@tcp(127.0.0.1:3306)/goblog?charset=utf8mb4&parseTime=True&loc=Local"
+DSN="mygodatabase:12345678@tcp(db4free.net:3306)/goblogdatabase?charset=utf8mb4&parseTime=True&loc=Local"
 PORT="3000"
